# Mi4Pd

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.pdlibbuilder  README.md  brds~.cpp  clds_reverb~-help.pd  clds_reverb~.cpp  clds~-help.pd  clds~.cpp  grids.cpp  lmnts~-help.pd  lmnts~.cpp  rngs_chorus~.cpp  rngs_ensemble~.cpp  rngs_reverb~.cpp  rngs~.cpp  tb_clds_reverb~-help.pd  tbtest-help.pd  tbtest-meta.pd  tbtest.c  tbtest.cpp  wrps~.cpp
Organelle/: .gitignore  README.md  mother-desktop.pd
Organelle/brds/: brds-module.json  brds-param.json  main.pd  oKontrolOrganelle~-help.pd  sequence.txt  sequencer2.pd  voice.pd
Organelle/brds/patchmenu/: auxpager.pd  knobpager.pd  knobpassthru.pd  patchmenu.pd  recallvals.pd  savevals.pd  screenpager.pd  versioncheck.pd
Organelle/clds/: main.pd
Organelle/clds/o-knob/: once.pd  takeover.pd  threshold.pd
Organelle/exprbrds/: main.pd  voice.pd
Organelle/lmnts/: main.pd
Organelle/lmnts/o-knob/: symbol_argument.pd
Organelle/rngs_chorus/: main.pd
Organelle/rngs_ensemble/: main.pd
Organelle/rngs_reverb/: main.pd
Organelle/wrps/: main.pd
Organelle/wrps/o-knob/: o-knob.pd
brds/: CMakeLists.txt  brds~-help.pd  brds~.cpp
clds/: CMakeLists.txt  clds~-help.pd
clds_reverb/: CMakeLists.txt
grds/: CMakeLists.txt  grids.cpp
lmnts/: CMakeLists.txt  lmnts~.cpp
mi/: CMakeLists.txt
mi/clouds/dsp/: granular_processor.cc
rngs/: CMakeLists.txt  rngs~.cpp
rngs_chorus/: CMakeLists.txt
rngs_ensemble/: CMakeLists.txt
rngs_reverb/: CMakeLists.txt
tb_clds_reverb_tilde/: tb_clds_reverb~.cpp
tb_wrps_tilde/: tb_wrps~.cpp
wrps/: CMakeLists.txt
